added description to slim version audiodocs

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -377,7 +377,7 @@
             {{audiodoc.topic_name}}
           </div>
 
-          <p style="font-size:1.6em;">{{audiodocs.topic_description}}</p>
+          <p style="font-size:1.6em;">{{audiodoc.topic_description}}</p>
           <p style="font-style:italic;">narrated by {{ audiodoc.narration_credits }}</p>
           <p style="font-style:italic;">music by {{ audiodoc.music_credits }}</p>
         </div>
