added button. too big..

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -339,6 +339,7 @@
             Your browser does not support the audio element.
           </audio>
         </div>
+        <button type="button" class="btn btn-info"> View more</button>
       </div>
     </div> <!-- container -->
   </section>
@@ -357,7 +358,6 @@
             <p class = 'justify'>We’re a bunch of young academics trying to change the way academia interacts with the public. If you have more interests than you can keep track of, you’re in the right place.</p>
             <br>
             <p class = 'justify'>We make short audio documentaries, written by academics, for the enjoyment of everyone else. From space to spider monkeys, pyramids to Pythagoras – there’s no limit to what you could be learning.</p>
-
           </div>
       </div>
     </div>
