--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -339,7 +339,10 @@
             Your browser does not support the audio element.
           </audio>
         </div>
-        <button type="button" class="btn btn-info"> View more</button>
+        <div class="comments-button">
+          <button type="button" class="btn btn-info"> View more</button>
+        </div>
+        <br>
       </div>
     </div> <!-- container -->
   </section>
@@ -387,6 +390,10 @@
             Your browser does not support the audio element.
           </audio>
         </div>
+        <div class="comments-button">
+          <button type="button" class="btn btn-info"> View more</button>
+        </div>
+        <br>
       </div>
     </div> <!-- container -->
 <br>
