cleaned up a bit

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -317,9 +317,9 @@
   </header>
 
 
-  <!-- Audiodocs. The first is the most recent one -->
+  <!-- most recent Audiodoc -->
 
-  <section id="recent-episode">
+  <section> <!-- the most recent episode -->
     <div class="container previous-audiodoc">
       <div class="row">
 
@@ -347,6 +347,7 @@
     </div> <!-- container -->
   </section>
 
+
   <!-- About Section -->
   <section class="success" id="about">
     <div class="container">
@@ -365,12 +366,12 @@
       </div>
     </div>
     </div>
-  </section>g
+  </section>
 
 
 <!-- PREVIOUS AUDIODOCS!! -->
 
-  <section id="other-episodes">
+  <section id="episodes">
     {% for audiodoc in audiodocs %}
     <div class="container previous-audiodoc">
       <div class="row">
