--- a/templates/audiodoc.html
+++ b/templates/audiodoc.html
@@ -29,6 +29,10 @@
   <!-- Custom CSS -->
   <link href="/static/css/knowitwallredux.css" rel="stylesheet">
 
+  <!-- audiodoc css (nav bar always solid) -->
+  <link href="/static/css/audiodoc_page.css" rel="stylesheet">
+
+
   <!-- Custom Fonts -->
   <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
@@ -467,7 +471,6 @@
 
 
   <script src="/static/js/classie.js"></script>
-  <script src="/static/js/cbpAnimatedHeader.js"></script>
 
   <!-- Contact Form JavaScript -->
   <script src="/static/js/jqBootstrapValidation.js"></script>
