--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -317,35 +317,6 @@
   </header>
 
 
-  <!-- most recent Audiodoc -->
-
-  <section> <!-- the most recent episode -->
-    <div class="container previous-audiodoc">
-      <div class="row">
-
-        <div class="col-lg-8 col-lg-offset-2 text-center">
-          <div class="episode-title">
-            {{audiodocs[0].topic_name}}
-          </div>
-
-          <p style="font-size:1.6em;">{{audiodocs[0].topic_description}}</p>
-          <p style="font-style:italic;">narrated by {{ audiodocs[0].narration_credits }}</p>
-          <p style="font-style:italic;">music by {{ audiodocs[0].music_credits }}</p>
-        </div>
-
-        <div class="col-lg-12">
-          <audio controls>
-            <source src="{{audiodocs[0].audio_mp3}}" type="audio/mpeg">
-            Your browser does not support the audio element.
-          </audio>
-        </div>
-        <div class="comments-button">
-          <button type="button" class="btn btn-info"> View more</button>
-        </div>
-        <br>
-      </div>
-    </div> <!-- container -->
-  </section>
 
 
   <!-- About Section -->
@@ -369,38 +340,38 @@
   </section>
 
 
-<!-- PREVIOUS AUDIODOCS!! -->
+  <!-- AUDIODOCS!! -->
 
-  <section id="episodes">
-    {% for audiodoc in audiodocs %}
-    <div class="container previous-audiodoc">
-      <div class="row">
+    <section id="episodes">
+      {% for audiodoc in audiodocs %}
+      <div class="container previous-audiodoc">
+        <div class="row">
 
-        <div class="col-lg-8 col-lg-offset-2 text-center">
-          <div class="episode-title">
-            {{audiodoc.topic_name}}
+          <div class="col-lg-8 col-lg-offset-2 text-center">
+            <div class="episode-title">
+              {{audiodoc.topic_name}}
+            </div>
+
+            <p style="font-size:1.6em;">{{audiodoc.topic_description}}</p>
+            <p style="font-style:italic;">narrated by {{ audiodoc.narration_credits }}</p>
+            <p style="font-style:italic;">music by {{ audiodoc.music_credits }}</p>
           </div>
-
-          <p style="font-size:1.6em;">{{audiodoc.topic_description}}</p>
-          <p style="font-style:italic;">narrated by {{ audiodoc.narration_credits }}</p>
-          <p style="font-style:italic;">music by {{ audiodoc.music_credits }}</p>
+          <div class="col-lg-12">
+            <audio controls>
+              <source src="{{audiodoc.audio_mp3}}" type="audio/mpeg">
+              Your browser does not support the audio element.
+            </audio>
+          </div>
+          <div class="comments-button">
+            <button type="button" class="btn btn-info"> View more</button>
+          </div>
+          <br>
         </div>
-        <div class="col-lg-12">
-          <audio controls>
-            <source src="{{audiodoc.audio_mp3}}" type="audio/mpeg">
-            Your browser does not support the audio element.
-          </audio>
-        </div>
-        <div class="comments-button">
-          <button type="button" class="btn btn-info"> View more</button>
-        </div>
-        <br>
-      </div>
-    </div> <!-- container -->
-<br>
-<br>
-    {% endfor %}
-  </section> <!-- end of episodes -->
+      </div> <!-- container -->
+  <br>
+  <br>
+      {% endfor %}
+    </section> <!-- end of episodes -->
 
 
   <!-- Contribute Section -->
@@ -425,69 +396,70 @@
   </section>
 
 
-  <!-- Contact Section -->
-  <section id="contact">
+    <!-- feedback Section -->
+    <section id="contact">
 
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <div class="contact-title">
-          <h2>Feedback</h2>
-          <p> We need your feedback to grow! Please leave any criticism, praise or advice below</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <div class="contact-title">
+            <h2>Feedback</h2>
+            <p> We need your feedback to grow! Please leave any criticism, praise or advice below</p>
+            </div>
+
           </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2">
+            <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
+            <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
+            <form name="sentMessage" id="contactForm" novalidate>
+              <div class="row control-group">
+                <div class="form-group col-xs-12 floating-label-form-group controls">
+                  <label>Name (optional)</label>
+                  <input type="text" class="form-control" name="name" placeholder="Name (optional)" id="name">
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
 
+              <div class="row control-group">
+                <div class="form-group col-xs-12 floating-label-form-group controls">
+                  <label>Email address (optional)</label>
+                  <input type="email" class="form-control" name="email" placeholder="Email address (optional)" id="email">
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
+
+              <div class="row control-group">
+                <div class="form-group col-xs-12 floating-label-form-group controls">
+                  <label>Feedback on the audio documentary</label>
+                  <textarea rows="4" class="form-control" name="feedback_text" placeholder="Feedback on the audio documentary you've listened to (script, narration, music, sound effects, etc.) " id="message" required data-validation-required-message="Please enter some feedback!"></textarea>
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
+
+              <div class="row control-group">
+                <div class="form-group col-xs-12 floating-label-form-group controls">
+                  <label>Overall Feedback</label>
+                  <textarea rows="4" class="form-control" name="feedback_overall" placeholder="Overall feedback on the website and project" id="message" required data-validation-required-message="Please enter some feedback!"></textarea>
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
+
+              <br>
+              <div id="success"></div>
+              <div class="row">
+                <div class="form-group col-xs-12">
+                  <button type="submit" class="btn btn-success btn-lg">Send</button>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-          <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-          <form name="sentMessage" id="contactForm" novalidate>
-            <div class="row control-group">
-              <div class="form-group col-xs-12 floating-label-form-group controls">
-                <label>Name (optional)</label>
-                <input type="text" class="form-control" name="name" placeholder="Name (optional)" id="name">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
 
-            <div class="row control-group">
-              <div class="form-group col-xs-12 floating-label-form-group controls">
-                <label>Email address (optional)</label>
-                <input type="email" class="form-control" name="email" placeholder="Email address (optional)" id="email">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
+    </section>
 
-            <div class="row control-group">
-              <div class="form-group col-xs-12 floating-label-form-group controls">
-                <label>Feedback on the audio documentary</label>
-                <textarea rows="4" class="form-control" name="feedback_text" placeholder="Feedback on the audio documentary you've listened to (script, narration, music, sound effects, etc.) " id="message" required data-validation-required-message="Please enter some feedback!"></textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-
-            <div class="row control-group">
-              <div class="form-group col-xs-12 floating-label-form-group controls">
-                <label>Overall Feedback</label>
-                <textarea rows="4" class="form-control" name="feedback_overall" placeholder="Overall feedback on the website and project" id="message" required data-validation-required-message="Please enter some feedback!"></textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-
-            <br>
-            <div id="success"></div>
-            <div class="row">
-              <div class="form-group col-xs-12">
-                <button type="submit" class="btn btn-success btn-lg">Send</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-
-  </section>
 
 
   <!-- Footer -->
