seperate page not glitching. audiodoc function written. need to get seperate audiodoc page to generate dyanmically

--- a/static/css/knowitwallredux.css
+++ b/static/css/knowitwallredux.css
@@ -169,7 +169,7 @@ header .container {
 }
 
 .previous-audiodoc{
-  background-color: #F8F8F8;
+  background-color: #F0F0F0;    /*#F8F8F8 */
   padding-top: 30px;
 }
 
