--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -345,7 +345,7 @@
             </div>
             -->
             <div class="comments-button">
-              <a href="{{url_for('audiodoc')}}"><button type="button" class="btn btn-info">  View more </button> </a>
+              <a href="{{url_for('audiodoc')}}"><button type="button" class="btn btn-info">  HEAR ALL ABOUT IT </button> </a>
             </div>
             <br>
           </div>
