--- a/templates/audiodoc.html
+++ b/templates/audiodoc.html
@@ -63,7 +63,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href=" {{url_for('index')}}">   <!-- for audiodocs, the logo goes back to home page-->
+        <a class="navbar-brand" href=" {{url_for('index')}}">   <!-- for audiodoc, the logo goes back to home page-->
 
     <!-- svg shizzle -->
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -281,19 +281,17 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <div class="episode-title">
-            {{audiodocs[0].topic_name}}
+            {{audiodoc[0].topic_name}}
           </div>
 
-          <p style="font-size:1.6em;">{{audiodocs[0].topic_description}}</p>
-          <p style="font-style:italic;">narrated by {{ audiodocs[0].narration_credits }}</p>
-          <p style="font-style:italic;">music by {{ audiodocs[0].music_credits }}</p>
+          <p style="font-size:1.6em;">{{audiodoc[0].topic_description}}</p>
+          <p style="font-style:italic;">narrated by {{ audiodoc[0].narration_credits }}</p>
+          <p style="font-style:italic;">music by {{ audiodoc[0].music_credits }}</p>
         </div>
 
         <div class="col-lg-12">
           <audio controls>
-            <source src="{{audiodocs[0].audio_mp3}}" type="audio/mpeg">
-            <source src="{{audiodocs[0].audio_ogg}}" type="audio/ogg">
-            <source src="{{audiodocs[0].audio_wav}}" type="audio/wav">
+            <source src="{{audiodoc[0].audio_mp3}}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
 
@@ -302,16 +300,16 @@
 
           <div class="author-bio">
             <div class="col-md-3">
-              <img class="clip-circle"class="img-responsive" src="{{audiodocs[0].author_image}}"  alt = "author image">
+              <img class="clip-circle"class="img-responsive" src="{{audiodoc[0].author_image}}"  alt = "author image">
             </div>
             <div class="col-md-3">
               <div class="author-name">
-              <h2 style="text-align:right;"> {{ audiodocs[0].author_name }} </h2>
+              <h2 style="text-align:right;"> {{ audiodoc[0].author_name }} </h2>
               </div>
             </div>
             <div class="col-md-6">
               <div class="vertical-line">
-              <p> {{ audiodocs[0].author_bio | safe}} </p>
+              <p> {{ audiodoc[0].author_bio | safe}} </p>
               </div>
             </div>
           </div>
@@ -319,7 +317,7 @@
 
         <div class="col-md-12">
           <div class="transcript"> <!-- transcript class gives the padding -->
-            {{ audiodocs[0].transcript | safe }}
+            {{ audiodoc[0].transcript | safe }}
           </div>
         </div>
       </div>  <!-- row -->
@@ -329,9 +327,9 @@
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'knowitwall'; // Required - Replace '<example>' with your forum shortname
-            var disqus_identifier = '{{audiodocs[0].unique_id}}';
-            var disqus_url = 'http://knowitwall.com/{{audiodocs[0].unique_id}}';
-            var disqus_title = '{{audiodocs[0].unique_id}}';
+            var disqus_identifier = '{{audiodoc[0].unique_id}}';
+            var disqus_url = 'http://knowitwall.com/{{audiodoc[0].unique_id}}';
+            var disqus_title = '{{audiodoc[0].unique_id}}';
             /* * * DON'T EDIT BELOW THIS LINE * * */
             (function() {
                 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
