urls are better now: theyre at audiodocs/url rather than just /url

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -345,7 +345,7 @@
             </div>
             -->
             <div class="comments-button">
-              <a href="{{audiodoc.url}}"><button type="button" class="btn btn-info">  HEAR ALL ABOUT IT </button> </a>
+              <a href="audiodoc/{{audiodoc.url}}"><button type="button" class="btn btn-info">  HEAR ALL ABOUT IT </button> </a>
             </div>
             <br>
           </div>
