--- a/static/css/knowitwallredux.css
+++ b/static/css/knowitwallredux.css
@@ -9,6 +9,47 @@
     font-family: "GeosansLight";
     src: url("../fonts/GeosansLight.ttf");
 }
+
+/* newsletter popup window */
+
+a.selected {
+  background-color:#1F75CC;
+  color:white;
+  z-index:100;
+}
+
+.messagepop {
+  background-color:#FFFFFF;
+  border:1px solid #999999;
+  cursor:default;
+  display:none;
+  margin-top: 15px;
+  position:absolute;
+  text-align:left;
+  width:394px;
+  z-index:50;
+  padding: 25px 25px 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 3px;
+  padding-left: 15px;
+  text-indent: -15px;
+}
+
+.messagepop p, .messagepop.div {
+  border-bottom: 1px solid #EFEFEF;
+  margin: 8px 0;
+  padding-bottom: 8px;
+}
+.newsletter-popup {
+  border:3px solid #000000;
+  width:30%;
+}
+/* end of newsletter popup window */
+
+
 body {
     overflow-x: hidden;
 	color:#33353d;
