--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -58,6 +58,9 @@
 </head>
 
 <body id='page-top'>
+
+
+
   <div class="overflow">
 
   <!-- Navigation -->
@@ -257,17 +260,19 @@
         </a>
       </div>
 
+
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li class="hidden">
             <a href="#page-top"></a>
           </li>
-<!--
-          <li class="page-scroll">
-            <a href="#page-top">Home</a>
+
+          <li >
+            <a href="/newsletter" id="newsletter">Newsletter</a>
+
           </li>
-        -->
+
           <li class="page-scroll">
             <a href="#about">About</a>
           </li>
@@ -285,12 +290,51 @@
         </ul>
       <!-- /.navbar-collapse -->
       </div>
-
+      <div class="row"> <!-- row for popup newsletter form -->
+          <div class="messagepop pop newsletter-popup col-md-offset-2">
+            <!-- Begin MailChimp Signup Form -->
+            <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+            <style type="text/css">
+            	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+            	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+            	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+            </style>
+            <div id="mc_embed_signup">
+            <form action="//knowitwall.us11.list-manage.com/subscribe/post?u=6bb5e25cc5b0ac93e764c5cd8&amp;id=c77bd0a090" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+            	<h2>Subscribe to our mailing list</h2>
+            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+            <div class="mc-field-group">
+            	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+            </label>
+            	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+            </div>
+            <div class="mc-field-group">
+            	<label for="mce-FNAME">First Name </label>
+            	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+            </div>
+            <div class="mc-field-group">
+            	<label for="mce-LNAME">Last Name </label>
+            	<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+            </div>
+            	<div id="mce-responses" class="clear">
+            		<div class="response" id="mce-error-response" style="display:none"></div>
+            		<div class="response" id="mce-success-response" style="display:none"></div>
+            	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;"><input type="text" name="b_6bb5e25cc5b0ac93e764c5cd8_c77bd0a090" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                </div>
+            </form>
+            </div>
+            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+            <!--End mc_embed_signup-->
+          </div>
+      </div>
     <!-- /.container-fluid -->
-
     </div>
-
   </nav>
+
+
 
   <!-- Most Recent Podcast Section -->
   <header>
@@ -305,7 +349,7 @@
           </div>
 
         </div>
-          <div class="col-md-8">
+        <div class="col-md-8">
           <!--  Let top researchers inspire you through short audio documentaries -->
           <div id="tagline-2">
           <br>
@@ -315,6 +359,10 @@
       </div>
      </div>
   </header>
+
+
+
+
 
 
     <!-- AUDIODOCS!! -->
@@ -599,6 +647,8 @@
   }
   };
   </script>
+
+
 
 
 </body>
