worked on planning newsletter

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -269,8 +269,7 @@
           </li>
 
           <li >
-            <a href="/newsletter" id="newsletter">Newsletter</a>
-
+            <a href="/newsletter" id="newsletter">Subscribe</a>
           </li>
 
           <li class="page-scroll">
@@ -284,6 +283,7 @@
           <li class="page-scroll">
             <a href="#contribute">Contribute</a>
           </li>
+          
           <li class="page-scroll">
             <a href="#contact">Feedback</a>
           </li>
@@ -291,7 +291,7 @@
       <!-- /.navbar-collapse -->
       </div>
       <div class="row"> <!-- row for popup newsletter form -->
-          <div class="messagepop pop newsletter-popup col-md-offset-2">
+          <div class="messagepop pop newsletter-popup">
             <!-- Begin MailChimp Signup Form -->
             <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
             <style type="text/css">
