--- a/static/css/knowitwallredux.css
+++ b/static/css/knowitwallredux.css
@@ -10,6 +10,13 @@
     src: url("../fonts/GeosansLight.ttf");
 }
 
+/* feedback form title not in caps lock*/
+
+.feedbackform{
+  text-transform: none;
+  font-size: 220%;
+}
+
 /* newsletter popup window */
 
 a.selected {
@@ -47,6 +54,7 @@ label {
   border:3px solid #000000;
   width:100%;
 }
+
 /* end of newsletter popup window */
 
 
@@ -321,7 +329,7 @@ text-align: left;
     width:90%;
     margin-right: auto;
     margin-left:auto;
-
+    text-align: center;
 
 }
 
@@ -423,7 +431,9 @@ text-align: left;
   border-color: #33353D;
   border-radius: 0;
   border-width: 3px;
-  width:100%;
+  width: auto;
+  text-align: center;
+
 font-size: 1.5em;
 }
 
