--- a/static/css/knowitwallredux.css
+++ b/static/css/knowitwallredux.css
@@ -26,7 +26,7 @@ a.selected {
 }
 
 .messagepop {
-  background-color:#FFFFFF;
+  background-color:#F0F0F0;
   border:1px solid #999999;
   cursor:default;
   display:none;
@@ -53,6 +53,10 @@ label {
 .newsletter-popup {
   border:3px solid #000000;
   width:100%;
+}
+
+#mc_embed_signup form {
+  background-color: #F0F0F0;
 }
 
 /* end of newsletter popup window */
