--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -302,20 +302,30 @@
         </style>
         <div id="mc_embed_signup">
         <form action="//knowitwall.us11.list-manage.com/subscribe/post?u=6bb5e25cc5b0ac93e764c5cd8&amp;id=c77bd0a090" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll">
-            <h2>Subscribe to our mailing list</h2>
-            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-            <div class="mc-field-group">
-              <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-              </label>
-              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+          <div id="mc_embed_signup_scroll ">
+            <div class="row">
+              <div class="col-md-2 col-md-offset-4">
+                <h2>Subscribe to our mailing list</h2>
+              </div>
+              <div class="col-md-4">
+                <div class="mc-field-group">
+                  <label for="mce-EMAIL">Email Address </label>
+                  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                </div>
+
+
+                <div id="mce-responses" class="clear">
+                  <div class="response" id="mce-error-response" style="display:none"></div>
+                  <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>
+                <!--
+              </div>
+              <div class="col-md-4"> -->
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;"><input type="text" name="b_6bb5e25cc5b0ac93e764c5cd8_c77bd0a090" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
             </div>
-            <div id="mce-responses" class="clear">
-              <div class="response" id="mce-error-response" style="display:none"></div>
-              <div class="response" id="mce-success-response" style="display:none"></div>
-            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;"><input type="text" name="b_6bb5e25cc5b0ac93e764c5cd8_c77bd0a090" tabindex="-1" value=""></div>
-            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            </div>
           </div> <!--end of signup scoll div -->
         </form>
         </div>
@@ -584,64 +594,6 @@
         $( 'audio' ).audioPlayer();
     });
   </script>
-
-
-  <!-- disqus reveal and collapse -->
-  <script>
-  $('.disqus-reveal').click(function() {
-      $(this).slideUp(100);
-      $(this).next().slideToggle();
-      $(".disqus-collapse").slideDown(100);
-  });
-  $('.disqus-collapse').click(function() {
-      $(this).slideUp(100);
-      $(this).prev().slideToggle();
-      $(".disqus-reveal").slideDown(100);
-  });
-
-  </script>
-
-  <!-- script to reload disqus at different points of the page. takes 4 variables:
-    1. Where to place <div id="disqus_thread"></div>: Namely within the <div id="audiodocs[i].disqus_collapse" class="collapse">
-    2. disqus_identifier
-    3. disqus_url
-    4. disqus_title
-
-  -->
-  <script type="text/javascript">
-  var disqus_shortname = 'knowitwall';
-  var disqus_identifier; //made of post id and guid
-  var disqus_url; //post permalink
-  var disqus_title; // title of comment thread
-
-  function loadDisqus(source, identifier, url, title) {
-  if (window.DISQUS) {
-     jQuery('#disqus_thread').prependTo('#' + source); //append the HTML within <div id="audiodocs[i].disqus_collapse" class="collapse">
-     //if Disqus exists, call it's reset method with new parameters
-     DISQUS.reset({
-        reload: true,
-        config: function () {
-        this.page.identifier = identifier;
-        this.page.url = url;
-        this.page.title = title;
-        }
-     });
-  } else {
-     //insert a wrapper in HTML within d<div id="audiodocs[i].disqus_collapse" class="collapse">
-     jQuery('<div id="disqus_thread"></div>').prependTo('#' + source);
-     disqus_identifier = identifier; //set the identifier argument
-     disqus_url = url; //set the permalink argument
-     disqus_title = title;
-     //append the Disqus embed script to HTML
-     var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-     dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-     jQuery('head').append(dsq);
-  }
-  };
-  </script>
-
-
-
 
 </body>
 </html>
