feedback form now says which page it was sent from

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -501,7 +501,7 @@
                 <p class="help-block text-danger"></p>
               </div>
             </div>
-
+            <input type="hidden" name="ad_name" value="homepage">
             <br>
             <div id="success"></div>
             <div class="row">
@@ -548,7 +548,7 @@
             team@knowitwall.com
           </div>
           <div class="col-lg-4">
-            <a href="{{url_for('terms')}}">Terms and Conditions</a>
+            <a href="{{url_for('terms')}}">Terms of Use</a>
           </div>
         </div>
       </div>
