--- a/templates/audiodoc.html
+++ b/templates/audiodoc.html
@@ -353,8 +353,8 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <div class="contact-title">
-          <h2>Feedback</h2>
-          <p> We need your feedback to grow! Please leave any criticism, praise or advice below</p>
+            <h2 class="feedbackform">We'd love to have your thoughts on our site</h2>
+            <p> Help us grow! Please leave any criticism, praise or advice on the site or audiodoc below</p>
           </div>
 
         </div>
@@ -395,6 +395,8 @@
                 <p class="help-block text-danger"></p>
               </div>
             </div>
+
+            <input type="hidden" name="ad_name" value="{{audiodoc[0].topic_name}}">
 
             <br>
             <div id="success"></div>
@@ -442,7 +444,7 @@
             team@knowitwall.com
           </div>
           <div class="col-lg-4">
-            Terms and Conditions
+            <a href="{{url_for('terms')}}">Terms of Use</a>
           </div>
         </div>
       </div>
