changed some stuff

--- a/templates/audiodoc.html
+++ b/templates/audiodoc.html
@@ -353,8 +353,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <div class="contact-title">
-            <h2 class="feedbackform">We'd love to have your thoughts on our site</h2>
-            <p> Help us grow! Please leave any criticism, praise or advice on the site or audiodoc below</p>
+            <h2 class="feedbackform">We'd love to have your thoughts on this episode</h2>
           </div>
 
         </div>
