--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -413,7 +413,7 @@
           </div>
           -->
           <div class="comments-button">
-            <a href="audiodoc/{{audiodoc.url}}"><button type="button" class="btn btn-info">  HEAR ALL ABOUT IT </button> </a>
+            <a href="audiodoc/{{audiodoc.url}}"><button type="button" class="btn btn-info">  CHECK IT OUT </button> </a>
           </div>
           <br>
         </div>
@@ -459,8 +459,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <div class="contact-title">
-          <h2 class="feedbackform">We'd love to have your thoughts on our site</h2>
-          <p> Help us grow! Please leave any criticism, praise or advice on the site or audiodoc below</p>
+          <h2 class="feedbackform">We'd love to have your thoughts on our project</h2>
           </div>
 
         </div>
@@ -519,16 +518,18 @@
 
   <!-- Footer -->
   <footer class="text-center">
-    <!--<div class="footer-above">
+    <div class="footer-above">
       <div class="container">
         <div class="row">
 
           <div class="col-md-4 col-md-offset-4 ">
             <h3>We're social too</h3>
             <ul class="list-inline">
+              <!--
               <li>
                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
               </li>
+            -->
               <li>
                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
               </li>
@@ -537,7 +538,7 @@
 
         </div>
       </div>
-    </div>-->
+    </div>
     <div class="footer-below">
       <div class="container">
         <div class="row">
