--- a/static/css/knowitwallredux.css
+++ b/static/css/knowitwallredux.css
@@ -26,7 +26,7 @@ a.selected {
 }
 
 .messagepop {
-  background-color:#F0F0F0;
+  background-color:#FFC21C;
   border:1px solid #999999;
   cursor:default;
   display:none;
@@ -51,12 +51,12 @@ label {
   padding-bottom: 8px;
 }
 .newsletter-popup {
-  border:3px solid #000000;
   width:100%;
 }
 
 #mc_embed_signup form {
-  background-color: #F0F0F0;
+  background-color: #FFC21C;
+  border-width: 3px;
 }
 
 /* end of newsletter popup window */
