--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -305,26 +305,23 @@
           <div id="mc_embed_signup_scroll ">
             <div class="row">
               <div class="col-md-2 col-md-offset-4">
-                <h2>Subscribe to our mailing list</h2>
+                <h2>Newsletter</h2>
               </div>
               <div class="col-md-4">
                 <div class="mc-field-group">
-                  <label for="mce-EMAIL">Email Address </label>
-                  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                  <input type="email" value="" name="EMAIL" placeholder="your email" class="required email" id="mce-EMAIL">
                 </div>
-
-
                 <div id="mce-responses" class="clear">
                   <div class="response" id="mce-error-response" style="display:none"></div>
                   <div class="response" id="mce-success-response" style="display:none"></div>
                 </div>
-                <!--
+
               </div>
-              <div class="col-md-4"> -->
+              <div class="col-md-2">
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;"><input type="text" name="b_6bb5e25cc5b0ac93e764c5cd8_c77bd0a090" tabindex="-1" value=""></div>
-                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-            </div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-info"></div>
+              </div>
             </div>
           </div> <!--end of signup scoll div -->
         </form>
