--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -528,7 +528,7 @@
               </li>
             -->
               <li>
-                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                <a href="https://twitter.com/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
               </li>
             </ul>
           </div>
