--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -319,7 +319,7 @@
               <div class="col-md-2">
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;"><input type="text" name="b_6bb5e25cc5b0ac93e764c5cd8_c77bd0a090" tabindex="-1" value=""></div>
-                  <div class="clear"><input type="submit" style="border:3px solid #33353D" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="btn btn-info"></div>
+                  <div class="clear"><input type="submit" style="border:3px solid #33353D" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="newsletter-button"></div>
               </div>
             </div>
           </div> <!--end of signup scoll div -->
