newsletter signup looks good now

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -283,7 +283,7 @@
             <a href="#contact">Feedback</a>
           </li>
           <li >
-            <a href="/newsletter" id="newsletter">Subscribe</a>
+            <a href="/newsletter" id="newsletter">Newsletter</a>
           </li>
         </ul>
       <!-- /.navbar-collapse -->
@@ -304,10 +304,10 @@
         <form action="//knowitwall.us11.list-manage.com/subscribe/post?u=6bb5e25cc5b0ac93e764c5cd8&amp;id=c77bd0a090" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll ">
             <div class="row">
-              <div class="col-md-4 col-md-offset-2">
+              <div class="col-md-4 col-md-offset-3">
                 <h2 class="newsletter-signup_text">Subscribe to Knowitwall's newsletter</h2>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-3">
                 <div class="mc-field-group">
                   <input type="email" value="" style="border:3px solid #33353D;" name="EMAIL" placeholder="your email" class="required email" id="mce-EMAIL">
                 </div>
@@ -319,7 +319,7 @@
               <div class="col-md-2">
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;"><input type="text" name="b_6bb5e25cc5b0ac93e764c5cd8_c77bd0a090" tabindex="-1" value=""></div>
-                  <div class="clear"><input type="submit" style="border:3px solid #33353D" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="newsletter-button"></div>
+                  <div class="clear"><input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="newsletter-button"></div>
               </div>
             </div>
           </div> <!--end of signup scoll div -->
