--- a/static/css/knowitwallredux.css
+++ b/static/css/knowitwallredux.css
@@ -70,22 +70,21 @@ label {
   clear:both;
   background-color: #FFFFFF;
   border: 0 none;
-  border-radius:4px;
   border-width: 3px;
   color: #33353D;
   cursor: pointer;
   display: inline-block;
   font-size:15px;
   font-weight: bold;
-  height: 32px;
-  line-height: 32px;
+  height: 38px;
   margin: 0 5px 10px 0;
-  padding: 0 22px;
+  padding: 10px 22px;
   text-align: center;
   text-decoration: none;
-  vertical-align: top;
+  vertical-align: middle;
   white-space: nowrap;
   width: auto;
+  border:3px solid #33353D;
 }
 #mc_embed_signup .newsletter-button:hover {
   color: #33353D;
@@ -93,7 +92,27 @@ label {
   border-color: #33353D;
 }
 
-
+/* mailchimp button css
+clear:both;
+background-color: #FFFFFF;
+border: 0 none;
+border-radius:4px;
+border-width: 3px;
+color: #33353D;
+cursor: pointer;
+display: inline-block;
+font-size:15px;
+font-weight: bold;
+height: 32px;
+line-height: 32px;
+margin: 0 5px 10px 0;
+padding: 10px 22px;
+text-align: center;
+text-decoration: none;
+vertical-align: top;
+white-space: nowrap;
+width: auto;
+*/
 /* taken from btn-info
   background-color: #FFFFFF;
   color: #33353D;
