--- a/static/css/knowitwallredux.css
+++ b/static/css/knowitwallredux.css
@@ -12,15 +12,10 @@
 
 
 
-/*
-/* MailChimp Form Embed Code - Classic - 08/17/2011 */
-
-
-*/
 
 /* feedback form title not in caps lock*/
 
-.feedbackform{
+.feedbackform {
   text-transform: none;
   font-size: 220%;
 }
@@ -91,39 +86,6 @@ label {
   background-color: #FFC21C;
   border-color: #33353D;
 }
-
-/* mailchimp button css
-clear:both;
-background-color: #FFFFFF;
-border: 0 none;
-border-radius:4px;
-border-width: 3px;
-color: #33353D;
-cursor: pointer;
-display: inline-block;
-font-size:15px;
-font-weight: bold;
-height: 32px;
-line-height: 32px;
-margin: 0 5px 10px 0;
-padding: 10px 22px;
-text-align: center;
-text-decoration: none;
-vertical-align: top;
-white-space: nowrap;
-width: auto;
-*/
-/* taken from btn-info
-  background-color: #FFFFFF;
-  color: #33353D;
-  background: none;
-  border-color: #33353D;
-  border-radius: 0;
-  border-width: 3px;
-  width: auto;
-  text-align: center;
-  font-size: 1.5em;
-*/
 
 
 #mc_embed_signup form {
@@ -457,7 +419,7 @@ text-align: left;
 }
 }
 
-.episode-title {
+.episode-title-nowrap {
 
  font-size:4em;
   font-family: GeosansLight;
@@ -467,9 +429,24 @@ text-align: left;
  display: inline-block;
  white-space: nowrap;
 }
+.episode-title {
+
+ font-size:4em;
+  font-family: GeosansLight;
+ color:#33353d;
+ background-color: rgba(255, 194, 28, 1);
+ margin-bottom: 20px;
+ display: inline-block;
+}
 
 @media(max-width:561px) {
   .episode-title {
+    font-size:3em;
+    white-space: normal;
+  }
+}
+@media(max-width:561px) {
+  .episode-title-nowrap {
     font-size:3em;
     white-space: normal;
   }
@@ -546,7 +523,7 @@ padding:40px;
 
 
 .navbar-brand {
-  padding: 0px 15px 20.5px;
+  padding: 0px 100px 20.5px 20px;
 }
 
 @media(max-width:400px) {
