--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -303,33 +303,32 @@
         <!-- Begin MailChimp Signup Form -->
         <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
         <style type="text/css">
-          #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-          /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-             We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+        	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+        	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
         </style>
         <div id="mc_embed_signup">
-        <form action="//knowitwall.us11.list-manage.com/subscribe/post?u=6bb5e25cc5b0ac93e764c5cd8&amp;id=c77bd0a090" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll ">
-            <div class="row">
-              <div class="col-md-4 col-md-offset-3">
-                <h2 class="newsletter-signup_text">Subscribe to Knowitwall's newsletter</h2>
-              </div>
-              <div class="col-md-3">
-                <div class="mc-field-group">
-                  <input type="email" value="" style="border:3px solid #33353D;" name="EMAIL" placeholder="your email" class="required email" id="mce-EMAIL">
+        <form action="//knowitwall.us11.list-manage.com/subscribe/post?u=0c2ccb6c7234e8de621e119c8&amp;id=4ff941f843" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <div class="row">
+                <div class="col-md-6 col-md-offset-1">
+              	   <h2 class="newsletter-signup_text">Get notified of new content by signing up to our newsletter</h2>
                 </div>
-                <div id="mce-responses" class="clear">
-                  <div class="response" id="mce-error-response" style="display:none"></div>
-                  <div class="response" id="mce-success-response" style="display:none"></div>
+                <div class="col-md-3">
+                  <div class="mc-field-group">
+                  	<input type="email" value="" style="border:3px solid #33353D;" name="EMAIL" placeholder="your email address" class="required email" id="mce-EMAIL">
+                  </div>
+                	<div id="mce-responses" class="clear">
+                		<div class="response" id="mce-error-response" style="display:none"></div>
+                		<div class="response" id="mce-success-response" style="display:none"></div>
+                	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 </div>
-              </div>
-              <div class="col-md-2">
-                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;"><input type="text" name="b_6bb5e25cc5b0ac93e764c5cd8_c77bd0a090" tabindex="-1" value=""></div>
+                <div class="col-md-2">
+                  <div style="position: absolute; left: -5000px;"><input type="text" name="b_0c2ccb6c7234e8de621e119c8_4ff941f843" tabindex="-1" value=""></div>
                   <div class="clear"><input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="newsletter-button"></div>
+                </div>
               </div>
             </div>
-          </div> <!--end of signup scoll div -->
         </form>
         </div>
         <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
@@ -337,8 +336,6 @@
       </div>
     </div>
   </nav>
-
-
 
 
   <!-- Most Recent Podcast Section -->
@@ -397,10 +394,10 @@
 
           <div class="col-lg-8 col-lg-offset-2 text-center">
             <div class="episode-title{{audiodoc.topic_name_wrap}}" style="{{audiodoc.topic_name_wrap}}">
-              {{audiodoc.topic_name}}
+              {{audiodoc.topic_name | safe}}
             </div>
 
-            <p style="font-size:1.6em;">{{audiodoc.topic_description}}</p>
+            <p style="font-size:1.6em;">{{audiodoc.topic_description | safe}}</p>
 
             <!--
             <p style="font-style:italic;">narrated by {{ audiodoc.narration_credits }}</p>
@@ -484,7 +481,7 @@
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
                 <label>Name (optional)</label>
-                <input type="text" class="form-control" name="name" placeholder="Name (optional)" id="name">
+                <input type="text" class="form-control" name="name" placeholder="your name (optional)" id="name">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
@@ -492,7 +489,7 @@
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
                 <label>Email address (optional)</label>
-                <input type="email" class="form-control" name="email" placeholder="Email address (optional)" id="email">
+                <input type="email" class="form-control" name="email" placeholder="your email address (optional)" id="email">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
