--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -287,11 +287,10 @@
           <li>
             <a href="/newsletter" id="newsletter">Newsletter</a>
           </li>
-          <!--
           <li>
             <a href="https://twitter.com/" target="_blank" class=""><i class="fa fa-fw fa-twitter"></i></a>
           </li>
-        -->
+
         </ul>
       <!-- /.navbar-collapse -->
       </div>
@@ -481,7 +480,7 @@
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
                 <label>Name (optional)</label>
-                <input type="text" class="form-control" name="name" placeholder="your name (optional)" id="name">
+                <input type="text" class="form-control" name="name" placeholder="Your name (optional)" id="name">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
@@ -489,7 +488,7 @@
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
                 <label>Email address (optional)</label>
-                <input type="email" class="form-control" name="email" placeholder="your email address (optional)" id="email">
+                <input type="email" class="form-control" name="email" placeholder="Your email address (optional)" id="email">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
@@ -512,7 +511,7 @@
 
   <!-- Footer -->
   <footer class="text-center">
-    <!--
+
     <div class="footer-above">
       <div class="container">
         <div class="row">
@@ -520,12 +519,12 @@
           <div class="col-md-4 col-md-offset-4 ">
             <h3>We're social too</h3>
             <ul class="list-inline">
-
+              <!--
               <li>
                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
               </li>
 
-
+-->
               <li>
                 <a href="https://twitter.com/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
               </li>
@@ -534,7 +533,7 @@
 
         </div>
       </div>
-    </div> -->
+    </div>
     <div class="footer-below">
       <div class="container">
         <div class="row">
