--- a/templates/audiodoc.html
+++ b/templates/audiodoc.html
@@ -63,7 +63,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href=" {{url_for('index')}}">   <!-- for audiodoc, the logo goes back to home page-->
+        <a class="navbar-brand navbarADpage" href=" {{url_for('index')}}">   <!-- for audiodoc, the logo goes back to home page-->
 
     <!-- svg shizzle -->
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -249,7 +249,7 @@
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav">
           <!--
           <li class="hidden">
              <a href="#page-top"></a>
@@ -270,9 +270,55 @@
             <a href="#contact">Feedback</a>
           </li>
         </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="/newsletter" id="newsletter">Newsletter</a>
+          </li>
+          <li>
+            <a href="https://twitter.com/" target="_blank" class=""><i class="fa fa-fw fa-twitter"></i></a>
+          </li>
+
+        </ul>
       <!-- /.navbar-collapse -->
       </div>
     <!-- /.container-fluid -->
+    </div>
+    <div class="row newsrow"> <!-- row for popup newsletter form -->
+      <div class="messagepop pop newsletter-popup">
+        <!-- Begin MailChimp Signup Form -->
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+        	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+        	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+        	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+        <div id="mc_embed_signup">
+        <form action="//knowitwall.us11.list-manage.com/subscribe/post?u=0c2ccb6c7234e8de621e119c8&amp;id=4ff941f843" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <div class="row">
+                <div class="col-md-6 col-md-offset-1">
+              	   <h2 class="newsletter-signup_text">Get notified of new content by signing up to our newsletter</h2>
+                </div>
+                <div class="col-md-3">
+                  <div class="mc-field-group">
+                  	<input type="email" value="" style="border:3px solid #33353D;" name="EMAIL" placeholder="your email address" class="required email" id="mce-EMAIL">
+                  </div>
+                	<div id="mce-responses" class="clear">
+                		<div class="response" id="mce-error-response" style="display:none"></div>
+                		<div class="response" id="mce-success-response" style="display:none"></div>
+                	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                </div>
+                <div class="col-md-2">
+                  <div style="position: absolute; left: -5000px;"><input type="text" name="b_0c2ccb6c7234e8de621e119c8_4ff941f843" tabindex="-1" value=""></div>
+                  <div class="clear"><input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="newsletter-button"></div>
+                </div>
+              </div>
+            </div>
+        </form>
+        </div>
+        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+        <!--End mc_embed_signup-->
+      </div>
     </div>
   </nav>
 
@@ -375,7 +421,7 @@
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
                 <label>Name (optional)</label>
-                <input type="text" class="form-control" name="name" placeholder="Name (optional)" id="name">
+                <input type="text" class="form-control" name="name" placeholder="Your name (optional)" id="name">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
@@ -383,7 +429,7 @@
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
                 <label>Email address (optional)</label>
-                <input type="email" class="form-control" name="email" placeholder="Email address (optional)" id="email">
+                <input type="email" class="form-control" name="email" placeholder="Your email address (optional)" id="email">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
@@ -408,25 +454,27 @@
 
   <!-- Footer -->
   <footer class="text-center">
-    <!--<div class="footer-above">
+    <div class="footer-above">
       <div class="container">
         <div class="row">
 
           <div class="col-md-4 col-md-offset-4 ">
             <h3>We're social too</h3>
             <ul class="list-inline">
+              <!--
               <li>
                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
               </li>
+            -->
               <li>
-                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                <a href="https://twitter.com/" target="_blank"  class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
               </li>
             </ul>
           </div>
 
         </div>
       </div>
-    </div>-->
+    </div>
     <div class="footer-below">
       <div class="container">
         <div class="row">
