just need to get mehdis title on one line (same fix as on homepage

--- a/templates/audiodoc.html
+++ b/templates/audiodoc.html
@@ -326,7 +326,7 @@
     <div class="container previous-audiodoc">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
-          <div class="episode-title">
+          <div class="episode-title{{audiodoc.topic_name_wrap}}">
             {{audiodoc[0].topic_name | safe}}
           </div>
 
