--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -288,7 +288,7 @@
             <a href="/newsletter" id="newsletter">Newsletter</a>
           </li>
           <li>
-            <a href="https://twitter.com/" target="_blank" class=""><i class="fa fa-fw fa-twitter"></i></a>
+            <a href="https://twitter.com/KnowitWall" target="_blank" class=""><i class="fa fa-fw fa-twitter"></i></a>
           </li>
 
         </ul>
@@ -526,7 +526,7 @@
 
 -->
               <li>
-                <a href="https://twitter.com/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                <a href="https://twitter.com/KnowitWall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
               </li>
             </ul>
           </div>
