added optimezly tag in the head on landing page

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -3,7 +3,7 @@
 
 <head>
 
-
+  <script src="//cdn.optimizely.com/js/3239180053.js"></script>
 
   <meta name="google-site-verification" content="JoE7Yhdq8T8FWWOnlh_O3I0-LhZeTCRNegIK-GY3Us8" />
   <meta charset="utf-8">
@@ -410,7 +410,7 @@
               Your browser does not support the audio element.
             </audio>
           </div>
-          
+
           <div class="comments-button">
             <a href="audiodoc/{{audiodoc.url}}"><button type="button" class="btn btn-info">  CHECK IT OUT </button> </a>
           </div>
