changed email address in terms of use

--- a/templates/terms.html
+++ b/templates/terms.html
@@ -372,7 +372,7 @@
     <b>10. General.</b> In the event of any dispute with us, these Terms of Use will be governed by English law. If any one of these terms are considered unlawful then they shall be deemed severable and shall not affect the validity and enforcement of the remaining Terms of Use.
   </p>
   <p>
-    Questions: Should you have any questions regarding these TOU you may contact us at knowitwall@gmail.com
+    Questions: Should you have any questions regarding these TOU you may contact us at team@knowitwall.com
    </p>
   </div>
  </section>
