--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -315,11 +315,11 @@
                 </div>
                 <div class="col-md-3">
                   <div class="mc-field-group">
-                  	<input type="email" value="" style="border:3px solid #33353D;" name="EMAIL" placeholder="your email address" class="required email" id="mce-EMAIL">
+                  	<input type="email" value=""  name="EMAIL" placeholder="Your email address" class="required email" id="mce-EMAIL" style="border:3px solid #33353D; #mc_embed_signup div.mce_inline_error { background-color:#27282D}">
                   </div>
                 	<div id="mce-responses" class="clear">
                 		<div class="response" id="mce-error-response" style="display:none"></div>
-                		<div class="response" id="mce-success-response" style="display:none"></div>
+                		<div class="response" id="mce-success-response-KiW" style="display:none"></div>
                 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 </div>
                 <div class="col-md-2">
