--- a/static/css/knowitwallredux.css
+++ b/static/css/knowitwallredux.css
@@ -93,6 +93,7 @@ label {
 }
 #mc_embed_signup div.mce_inline_error {
   background-color:#27282D !important;
+  text-transform: lowercase;
 }
 #mc_embed_signup #mce-success-response-KiW {color:#27282D; display:none;}
 /* end of inline error for signup form */
