--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -590,12 +590,12 @@
         $( 'audio' ).audioPlayer();
     });
   </script>
-  <!-- trying to remove an element from mailchimp signup error message
+  <!-- trying to remove an element from mailchimp signup error message -->
   <script type="text/javascript">
     $('#about-f').text(function (_,txt) {
         return txt.slice(0, -1);
     });
   </script>
--->
+
 </body>
 </html>
