seperate page link to Read. terms of use, only logo.

--- a/templates/audiodoc.html
+++ b/templates/audiodoc.html
@@ -263,9 +263,11 @@
           -->
 
           <li class="page-scroll">
-            <a href="#episodes">episodes</a>
+            <a href="#episodes">Episode</a>
           </li>
-
+          <li class="page-scroll">
+            <a href="#read">Read</a>
+          </li>
           <li class="page-scroll">
             <a href="#contact">Feedback</a>
           </li>
@@ -356,7 +358,7 @@
             </div>
             <div class="col-md-6">
               <div class="vertical-line">
-              <p> {{ audiodoc[0].author_bio | safe}} </p>
+              <p id="read"> {{ audiodoc[0].author_bio | safe}} </p>
               </div>
             </div>
           </div>
