trying facebook thumnbail

--- a/templates/audiodoc.html
+++ b/templates/audiodoc.html
@@ -13,7 +13,7 @@
   <meta name="author" content="">
   <meta property="og:image" content="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" />
   <meta property="og:title" content="Know It Wall" />
-  <meta property="og:description" content="If you have more interests than you can keep track of, you’re in the right place. Know It Wall makes short audio documentaries, written by academics, for the enjoyment of everyone." />
+  <meta property="og:description" content="{{audiodoc[0].topic_description | safe}}" />
   <meta property="og:url" content="http://knowitwall.com/" />
   <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
