added og url for each audiodoc page

--- a/templates/audiodoc.html
+++ b/templates/audiodoc.html
@@ -14,7 +14,7 @@
   <meta property="og:image" content="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" />
   <meta property="og:title" content="Know It Wall" />
   <meta property="og:description" content="{{audiodoc[0].topic_description | safe}}" />
-  <meta property="og:url" content="http://knowitwall.com/" />
+  <meta property="og:url" content="http://knowitwall.com/audiodoc/{{audiodoc.url}}" />
   <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
 
