feedback form works again

--- a/templates/audiodoc.html
+++ b/templates/audiodoc.html
@@ -409,14 +409,12 @@
       </div>
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-          <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
           <form name="sentMessage" id="contactForm" novalidate>
 
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
                 <label>Feedback on the audio documentary</label>
-                <textarea rows="4" class="form-control" name="feedback_text" placeholder="Your feedback on the script, narration, music, sound effects, etc. Bonus points if you can make us cry! " id="message" required data-validation-required-message="Please enter some feedback!"></textarea>
+                <textarea rows="4" class="form-control" name="feedback_overall" placeholder="Your feedback on the script, narration, music, sound effects, etc. Bonus points if you can make us cry! " id="message" required data-validation-required-message="Please enter some feedback!"></textarea>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
